# PokeML

./: .gitignore  Dockerfile  README.md  sonar-project.properties
.github/workflows/: build.yml
poke-cards-api/: pyproject.toml  sonar-project.properties
poke-cards-api/src/: controller.py
poke-cards-api/tests/: test_controller.py
poke-cards-front/: package-lock.json  package.json
pokeml-api/: pyproject.toml  sonar-project.properties
pokeml-api/coverage-reports/: coverage.lcov
pokeml-api/src/: controller.py
pokeml-api/tests/: test_controller.py
pokeml-front/: .gitignore  package-lock.json  package.json  vite.config.ts
pokeml-front/src/: example.js
pokeml-front/src/__tests__/: example.test.js
